fixed database connection and added api call to find all businesses

--- a/business/src/main/resources/application.yml
+++ b/business/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
     datasource:
-        url: jdbc:postgresql://localhost:5432/data_jpa
+        url: jdbc:postgresql://localhost:5432/data_business
         username: postgres
         password: password
         hikari:
